myteo/test/analyze/type_check/tuple/index_out_of_bounds_error.exp
Error: Tuple index out of range. Tuple has 3 elements so only indices 0 through 2 are allowed.
test/analyze/type_check/tuple/index_out_of_bounds_error.myte:6:4-6
 6 |   x[-1];
   |     ^^

Error: Tuple index out of range. Tuple has 3 elements so only indices 0 through 2 are allowed.
test/analyze/type_check/tuple/index_out_of_bounds_error.myte:7:4
 7 |   x[3];
   |     ^

Error: Tuple index out of range. Tuple has 3 elements so only indices 0 through 2 are allowed.
test/analyze/type_check/tuple/index_out_of_bounds_error.myte:8:4
 8 |   x[4];
   |     ^