myteo/test/analyze/type_check/tuple/index_out_of_bounds_error.myte
module test

fun main() {
  val x: (int, string, bool) = (1, "str", true);

  x[-1];
  x[3];
  x[4];
}